# memcli

./: .gitignore  API.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: release.yml
models/: config.json
src/: client.rs  config.rs  daemon.rs  daemon_state.rs  feedback.rs  graph.rs  handler.rs  index.rs  lib.rs  main.rs  name_index.rs  node.rs  protocol.rs  recall.rs  search.rs  util.rs  wal.rs
tests/: system_test.rs  test_atomic_persistence.rs  test_boundary_conditions.rs  test_config.rs  test_daemon_state.rs  test_embedding.rs  test_graph.rs  test_handler.rs  test_index.rs  test_integration.rs  test_name_index.rs  test_node.rs  test_protocol.rs  test_recall.rs  test_search.rs  test_wal.rs
tests/system/: helpers.rs
